# Median_Calculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.toml  specs.md
Headers/: config_parser.hpp  csv_reader.hpp  median_calculator.hpp
Sources/: config_parser.cpp  csv_reader.cpp  main.cpp  median_calculator.cpp
examples/input/: standart_data_1.csv  standart_data_2.csv  standart_data_3.csv
